--- a/contact.html
+++ b/contact.html
@@ -2,105 +2,118 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Contact</title>
+    <title>Portfolio</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 
+
     <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" media="screen">
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navbar nav-fill navbar-light bg-light">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <span class="navbar-brand mb-0 h1">Cody Sherrod</span>
-                </div>
-                <ul class="nav nav-fill justify-content-end">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                </ul>
-            </div>
-        </nav>
+    <!-- Start of navbar -->
 
-        <!-- Main Body goes in Container -->
-        <div class="container">
-            <div class="row">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid navbar-custom">
+            <div class="row justify-content-between">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="#" id="logo">Cody Sherrod</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <!-- The content in this div gets wrapped in a panel -->
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <h2>Portfolio</h2>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="nav navbar-nav mr-auto mt-2 mt-lg-0 navbar-right-custom">
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact
+                                    <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">About</a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
+                </nav>
             </div>
+        </div>
+    </nav>
+
+    <!-- Main Body goes in Container -->
+    <div class="wrap">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <form>
-                            <div class="form-group">
-                                <label for="formGroupExampleInput">Name</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleFormControlInput1">Email address</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Message</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
-                                <br>
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-md-4">
-                        <h3>Conect with Me</h3>
-                        <a href="https://github.com/csherrod">
-                            <img class="social" src="assets/images/github_square_black_107109_copy.png" alt="Github logo">
-                        </a>
-                        <a href="https://linkedin.com/in/cody-sherrod">
-                            <img class="social" src="assets/images/linkedin_square_color_107091_copy.png" alt="LinkedIn logo">
-                        </a>
-                        <a href="https://stackexchange.com/users/12788557/cody-sherrod">
-                            <img class="social" src="assets/images/stackoverflow_273179_copy.png" alt="StackOverflow logo">
-                        </a>
-                    </div>
+              <section class="row">
+                <div class="col-md-8">
+                        <form class="contact-form">
+                            <h1 class="contact-form-header">Contact</h1>
+                            <hr>
+                                <div class="form-group">
+                                    <label for="formGroupExampleInput">Name</label>
+                                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Email address</label>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Message</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                                    <br>
+                                    <button type="submit" class="btn submit-btn">Submit</button>
+                                </div>
+                            </form>
                 </div>
-            </div>
+
+                <!-- Start Connect with me Area-->
+                <div class="col-md-4">
+                    <section id="connect-with-me-area">
+                        <div class="connect-with-me-content">
+                            <h1 class="connect-with-me-header">Conect with Me</h1>
+                            <hr>
+                            <div id="images">
+                                <a href="https://github.com/csherrod">
+                                    <img class="connect-with-me-photo" src="assets/images/github_circle.png" alt="Github logo"></a>
+                                <a href="https://linkedin.com/in/cody-sherrod">
+                                    <img class="connect-with-me-photo" src="assets/images/linkedin_circle.png" alt="LinkedIn logo"></a>
+                                <a href="https://stackexchange.com/users/12788557/cody-sherrod">
+                                    <img class="connect-with-me-photo" src="assets/images/istackoverflow_circle.png" alt="StackOverflow logo"></a>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <!-- End Connect with me Area -->
+            </section>
         </div>
     </div>
+    <!-- Start footer -->
     <footer class="footer">
-        <div class="container text-center">
-            <span class="text-muted">© Copyright 2018 Cody Sherrod</span>
-        </div>
+        <div class="two-toned-footer-color"></div>
+        <p class=" text-muted-footer text-center">
+            &copy; Cody Sherrod 2018
+        </p>
     </footer>
+    <!-- End of footer -->
 
     <!-- Bootstrap core JavaScript
-================================================== -->
+  ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
