Updated portfolio to include a new link to the crystal collector game

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,9 @@
                                 </a>
                             </div>
                             <div class="work">
-                                <img src="http://lorempixel.com/g/200/200" alt="RPG Game">
-                                <a href="asdfknasdfoina">
-                                    <h3>RPG Game</h3>
+                                <img src="http://lorempixel.com/g/200/200" alt="Crystal Collector">
+                                <a href="https://csherrod.github.io/week-4-game/">
+                                    <h3>Crystal Collector</h3>
                                 </a>
                             </div>
                             <div class="work">
