Adding link to Giftastic

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,8 +73,8 @@
                             </div>
                             <div class="work">
                                 <img src="http://lorempixel.com/g/200/200" alt="Trivia Game">
-                                <a href="asdfknasdfoina">
-                                    <h3>Trivia Game</h3>
+                                <a href="https://csherrod.github.io/Giftastic/">
+                                    <h3>Giftastic</h3>
                                 </a>
                             </div>
                             <div class="work">
