updated one section on portfolio to add in the most recent project

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,9 +78,9 @@
                                 </a>
                             </div>
                             <div class="work">
-                                <img src="http://lorempixel.com/g/200/200" alt="Rutgers Info Widget">
-                                <a href="asdfknasdfoina">
-                                    <h3>UT Info Widget</h3>
+                                <img src="http://lorempixel.com/g/200/200" alt="Train Station">
+                                <a href=" https://csherrod.github.io/TrainStation/">
+                                    <h3>Train Station</h3>
                                 </a>
                             </div>
                             <div class="work">
