Updating portfolio to show the Bamazon app.

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,9 +84,21 @@
                                 </a>
                             </div>
                             <div class="work">
-                                <img src="http://lorempixel.com/g/200/200" alt="Rock Paper Scissors">
+                                <img src="http://lorempixel.com/g/200/200" alt="Liri Project">
                                 <a href="https://csherrod.github.io/liri-node-app/">
                                     <h3>Liri Project</h3>
+                                </a>
+                            </div>
+                            <div class="work">
+                                <img src="http://lorempixel.com/g/200/200" alt="Bamazon">
+                                <a href=" https://csherrod.github.io/Bamazon/">
+                                    <h3>Bamazon</h3>
+                                </a>
+                            </div>
+                            <div class="work">
+                                <img src="http://lorempixel.com/g/200/200" alt="Random Pic">
+                                <a href="https://csherrod.github.io/liri-node-app/">
+                                    <h3>Coming Soon</h3>
                                 </a>
                             </div>
                         </div>
