Updating portfolio to include friend finder

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,8 +97,8 @@
                             </div>
                             <div class="work">
                                 <img src="http://lorempixel.com/g/200/200" alt="Random Pic">
-                                <a href="https://csherrod.github.io/liri-node-app/">
-                                    <h3>Coming Soon</h3>
+                                <a href="https://thawing-escarpment-98135.herokuapp.com/">
+                                    <h3>Friend Finder</h3>
                                 </a>
                             </div>
                         </div>
