adding a new project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,17 @@
                                 <a href="https://thawing-escarpment-98135.herokuapp.com/">
                                     <h3>Friend Finder</h3>
                                 </a>
+                                <div class="work">
+                                    <img src="http://lorempixel.com/g/200/200" alt="Bamazon">
+                                    <a href="https://git.heroku.com/arcane-taiga-80935.git">
+                                        <h3>Burger</h3>
+                                    </a>
+                                </div>
+                                <div class="work">
+                                    <img src="http://lorempixel.com/g/200/200" alt="Random Pic">
+                                    <a href="?????">
+                                        <h3>Soon to Comer</h3>
+                                    </a>
                             </div>
                         </div>
                     </section>
